eks/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-ui
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: employee-ui

  template:
    metadata:
      labels:
        app: employee-ui

    spec:
      containers:
        - name: employee-ui
          # Build & push this image to your ECR repo, then update the tag.
          image: dockeritc778/ui:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
