eks/ui/svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-ui
  namespace: dev

spec:
  selector:
    app: employee-ui

  ports:
    - port: 80
      targetPort: 8080

  type: NodePort
