eks/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ui
  namespace: dev
  annotations:
    # Handled by the AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    # Optional: give the ALB a friendly name
    alb.ingress.kubernetes.io/load-balancer-name: employee-ui-alb

spec:
  ingressClassName: alb
  rules:
    - host: employee.itclabs.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-ui
                port:
                  number: 80
